Fixed table overflow issues in webkit (for now)

--- a/wcfsetup/install/files/style/layout.less
+++ b/wcfsetup/install/files/style/layout.less
@@ -1642,6 +1642,8 @@ html[dir="rtl"] {
 		padding: @wcfGapSmall;
 		text-align: left;
 		vertical-align: middle;
+		// non standard only webkit
+		word-break: break-word;
 		
 		> label {
 			cursor: pointer;
